overflow bug fixed

--- a/stacks/spica/src/bucket/components/filter/filter.component.scss
+++ b/stacks/spica/src/bucket/components/filter/filter.component.scss
@@ -1,9 +1,5 @@
 :host {
   ::ng-deep {
-    .mat-tab-labels {
-      justify-content: center;
-    }
-
     .input-placer-input {
       display: block;
       &.boolean,
@@ -17,6 +13,15 @@
         width: 80% !important;
         margin: 0 10%;
       }
+    }
+  }
+
+  mat-button-toggle-group{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    mat-button-toggle{
+      flex:1
     }
   }
 
@@ -34,9 +39,9 @@
   }
 
   div.tab-content {
+    margin: 10px;
     display: flex;
     flex-direction: row;
-
     code-editor {
       flex: 4;
     }
@@ -44,23 +49,22 @@
     div.history {
       flex: 1;
 
-      div.title {
+      h4 {
         display: flex;
         align-items: center;
         justify-content: center;
       }
-
-      h4{
-        margin: 5px 0px;
-      }
-
-      mat-chip-list{
-        margin-top: 15px
+      mat-chip-list {
+        margin-top: 15px;
       }
 
       mat-chip {
         margin: 5px auto;
       }
     }
+  }
+
+  p.mat-error{
+    text-align: center;
   }
 }
