--- a/stacks/spica/src/bucket/pages/index/index.component.scss
+++ b/stacks/spica/src/bucket/pages/index/index.component.scss
@@ -1,4 +1,5 @@
 ::ng-deep .filter-menu {
+  overflow: unset !important;
   max-width: unset !important;
   width: 600px;
   .mat-menu-content{
